<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.tritonus</groupId>
  <artifactId>tritonus</artifactId>
  <version>0.3.15</version>
  <packaging>pom</packaging>

  <name>Tritonus Parent Module</name>

  <modules>
    <module>tritonus-share</module>
    <module>tritonus-remaining</module>
    <module>tritonus-dsp</module>
    <module>tritonus-core</module>
    <module>tritonus-gsm</module>
    <module>tritonus-javasequencer</module>
    <module>tritonus-jorbis</module>
    <module>tritonus-midishare</module>
    <module>tritonus-mp3</module>
    <module>tritonus-esd</module>
    <module>tritonus-alsa</module>
    <module>tritonus-vorbis</module>
    <module>tritonus-pvorbis</module>
    <module>tritonus-cdda</module>
    <module>tritonus-fluidsynth</module>
    <module>tritonus-src</module>
    <module>tritonus-aos</module>
<!--
    <module>tritonus-timidity</module>
-->
    <module>tritonus-saol</module>
  </modules>

  <properties>
    <vavi-sound.groupId>com.github.umjammer</vavi-sound.groupId> <!-- vavi / com.github.umjammer -->

    <native.library.path>/usr/local/lib</native.library.path>
    <vavi.test.volume>0.02</vavi.test.volume>
    <vavi.test.volume.midi>0.2</vavi.test.volume.midi>
  </properties>

  <profiles>
    <profile>
      <id>mac arm64</id>
      <activation>
        <os>
          <family>mac</family>
          <arch>aarch64</arch>
        </os>
      </activation>
      <properties>
        <native.library.path>/opt/homebrew/lib</native.library.path>
      </properties>
    </profile>
  </profiles>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.12.1</version>
          <configuration>
            <release>17</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.tritonus</groupId>
        <artifactId>tritonus-share</artifactId>
        <version>0.3.15</version>
      </dependency>
      <dependency>
        <groupId>org.tritonus</groupId>
        <artifactId>tritonus-remaining</artifactId>
        <version>0.3.15</version>
      </dependency>

      <dependency>
        <groupId>net.java.dev.jna</groupId>
        <artifactId>jna</artifactId>
        <version>5.14.0</version>
      </dependency>

      <dependency>
        <groupId>com.github.umjammer</groupId>
        <artifactId>vavi-commons</artifactId>
        <version>1.1.14</version>
      </dependency>

      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.11.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.tritonus</groupId>
        <artifactId>tritonus-midishare</artifactId>
        <version>0.3.15</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.tritonus</groupId>
        <artifactId>tritonus-share</artifactId>
        <version>0.3.15</version>
        <type>test-jar</type>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.tritonus</groupId>
        <artifactId>tritonus-remaining</artifactId>
        <version>0.3.15</version>
        <type>test-jar</type>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.tritonus</groupId>
        <artifactId>tritonus-midishare</artifactId>
        <version>0.3.15</version>
        <type>test-jar</type>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>${vavi-sound.groupId}</groupId>
        <artifactId>vavi-sound</artifactId>
        <version>1.0.21</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>